--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,17 @@ import Header from "../components/Header/Header"
 					I plan to post my leetcode solutions and development logs of my personal projects.
 					Thank you for visiting.
 				</p>
+
+				<div class="text-3xl mb-3">My Projects</div>
+				<div class="text-2xl">Job Tracker | <a href="https://github.com/KyleHu14/job-tracker">Link</a></div>
+				<p>
+                    A web application that can track your job applications.
+                </p>
+				
+				<div class="text-2xl">Theta Website | <a href="https://github.com/KyleHu14/theta-website">Link</a> </div>
+                <p>
+                    A website built for a Sorority at UCI.
+                </p>
 			</div>
 			
 		</main>
