--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,7 +6,7 @@ import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 
 import Header from '../../components/Header/Header';
@@ -19,7 +19,7 @@ import Header from '../../components/Header/Header';
 		<style>
 			main {
 				width: 720px;
-				max-width: calc(100% - 2em);
+				/* max-width: calc(100% - 2em); */
 				margin: auto;
 				padding: 3em 1em;
 			}
