Added the feature to add images to blogs

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -61,7 +61,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				<div class="prose prose-h5:text-3xl prose-p:text-xl prose-ul:text-xl">
 					<Header />
 					<div class="title">
-						<div class="text-5xl font-semibold">{title}</div>
+						<div class="my-5 text-5xl font-semibold">{title}</div>
 						<div class="date">
 							<FormattedDate date={pubDate} />
 							{
