--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import Header from "../components/Header/Header"
 				
 				<div class="text-2xl">Theta Website | <a href="https://github.com/KyleHu14/theta-website">Link</a> </div>
                 <p>
-                    A website built for a Sorority at UCI.
+                    A website built for a sorority at UCI.
                 </p>
 			</div>
 			
