Added some basic UI changes

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -57,7 +57,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<main>
 			<article>
 				<!--  -->
-				<div class="prose prose-h5:text-3xl prose-p:text-xl prose-ul:text-xl">
+				<div class="prose prose-h5:text-3xl prose-p:text-xl prose-ul:text-xl prose-a:no-underline">
 					<Header />
 					<div class="title">
 						<div class="my-5 text-5xl font-semibold">{title}</div>
