--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,11 @@ import SocialLinks from '../components/SocialLinks/SocialLinks';
 		<main>
 			<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 			<Header />
-			<HorizontalLine marginValue='2'/>
+
+			<div class="my-2">
+				<HorizontalLine/>
+			</div>
+			
 			<div class="main-body text-left mt-10">
 				<div class="text-4xl mb-3">Hello! My name is Kyle.</div>
 				<p>
@@ -28,7 +32,10 @@ import SocialLinks from '../components/SocialLinks/SocialLinks';
 
 				<SocialLinks />
 				
-				<HorizontalLine marginValue="10"/>
+				<div class="mt-3 mb-8">
+					<HorizontalLine/>
+				</div>
+				
 				<div>
 					<div class="text-3xl mb-5">My Projects</div>
 					<div class="text-2xl">Job Tracker | <a href="https://github.com/KyleHu14/job-tracker">Link</a></div>
