--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import SocialLinks from '../components/SocialLinks/SocialLinks';
 					<HorizontalLine/>
 				</div>
 				
-				<div>
+				<div class="projects">
 					<div class="text-3xl mb-5">My Projects</div>
 					<div class="text-2xl">Job Tracker | <a href="https://github.com/KyleHu14/job-tracker">Link</a></div>
 					<p>
@@ -48,9 +48,24 @@ import SocialLinks from '../components/SocialLinks/SocialLinks';
 						A website built for a sorority at UCI.
 					</p>
 				</div>
-				
+
 			</div>
 			
 		</main>
 	</body>
 </html>
+
+<style>
+	main {
+		width: 720px;
+		/* max-width: calc(100% - 2em); */
+		margin: auto;
+		padding: 3em 1em;
+	}
+	ul {
+		display: flex;
+		flex-direction: column;
+		margin: 0;
+		padding: 0;
+	}
+</style>
