--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,52 +13,19 @@ const { title, description, pubDate, updatedDate } = Astro.props;
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={description} />
-		<style>
-			main {
-				width: 100%;
-				max-width: 100%;
-				margin: 0;
-			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				border-radius: 12px;
-				box-shadow: var(--box-shadow);
-			}
-			.prose {
-				width: 750px;
-				max-width: calc(100% - 2em);
-				margin: auto;
-				color: rgb(var(--gray-dark));
-			}
-			.title {
-				padding: 1em 0;
-				text-align: center;
-				line-height: 1;
-			}
-			.title h1 {
-				margin: 0 0 0.5em 0;
-			}
-			.date {
-				margin-bottom: 0.5em;
-				color: rgb(var(--gray));
-			}
-			.last-updated-on {
-				font-style: italic;
-			}
-		</style>
 	</head>
 
 	<body>
 		
 		<main>
+			<div class="header-container">
+				<Header />
+			</div>	
+			
 			<article>
 				<!--  -->
 				<div class="prose prose-h5:text-3xl prose-p:text-xl prose-ul:text-xl prose-a:no-underline">
-					<Header />
+					
 					<div class="title">
 						<div class="my-5 text-5xl font-semibold">{title}</div>
 						<div class="date">
@@ -79,3 +46,45 @@ const { title, description, pubDate, updatedDate } = Astro.props;
 		</main>
 	</body>
 </html>
+
+<style>
+	main {
+		width: 100%;
+		max-width: 100%;
+		margin: 0;
+	}
+	.hero-image {
+		width: 100%;
+	}
+	.hero-image img {
+		display: block;
+		margin: 0 auto;
+		border-radius: 12px;
+		box-shadow: var(--box-shadow);
+	}
+	.prose {
+		width: 750px;
+		max-width: calc(100% - 2em);
+		margin: auto;
+		color: rgb(var(--gray-dark));
+	}
+	.title {
+		padding: 1em 0;
+		text-align: center;
+		line-height: 1;
+	}
+	.title h1 {
+		margin: 0 0 0.5em 0;
+	}
+	.date {
+		margin-bottom: 0.5em;
+		color: rgb(var(--gray));
+	}
+	.last-updated-on {
+		font-style: italic;
+	}
+	.header-container{
+		width: 720px;
+		margin: auto;
+	}
+</style>
